add method field to responce improvement swagger template add checks for config load add catch for response serialize
