# src/python/config/swagger_template.yaml
@@ -6,16 +6,16 @@
 
   tags:
     - name: SimpleService
-      description: Template service configuration
+      description: perform service
     - name: HealthCheck
       description: Health check informations
   paths:
-     /+-template-+/V1/{message_idt}/{source_system}:
+     /+-template-+/v1/{message_idt}/{source_system}:
       get:
         tags:
           - SimpleService
         summary: query data
-        operationId: SimpleServiceGet
+        #operationId: SimpleServiceGet
         description: |
           Get rows from some tables
         parameters:
@@ -62,7 +62,7 @@
         tags:
           - SimpleService
         summary: post data
-        operationId: SimpleServicePost
+        #operationId: SimpleServicePost
         description: |
           Post data to DB
         parameters:
@@ -105,7 +105,7 @@
               application/json:
                 schema:
                   $ref: '#/components/schemas/post_required_out'
-     /+-template-+/V1/status:
+     /+-template-+/v1/status:
       get:
         tags:
           - HealthCheck
@@ -129,6 +129,7 @@
       get_required_out:
         type: object
         required:
+          - method
           - message_idt
           - source_system
           - rc
@@ -136,6 +137,10 @@
           - input_parms
           - records
         properties:
+          method:
+            type: string
+            format: string
+            example: +-template-+
           message_idt:
             type: string
             format: uuid
@@ -158,12 +163,17 @@
       post_required_out:
         type: object
         required:
+          - method
           - message_idt
           - source_system
           - rc
           - message
           - input_parms
         properties:
+          method:
+            type: string
+            format: string
+            example: +-template-+
           message_idt:
             type: string
             format: uuid
